--- a/index.html
+++ b/index.html
@@ -135,7 +135,25 @@
             </div>
             </div>
         </section>
-        
+        <section id="donationHistory" class="w-10/12 mx-auto hidden">
+
+        </section>
+
+        <section>
+            <dialog id="my_modal" class="modal">
+                <div class="modal-box flex flex-col items-center">
+                    <h1 class="text-3xl font-extrabold ">Congratulations!</h1>
+                    <img class="py-4" src="assets/coin.png" alt="coin">
+                    <p class="py-4 font-semibold">You Have Donated To Mankind</p>
+                    <h3 class="text-xl font-extrabold">Succesfully!</h3>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+        </section>
     </main>
 </body>
 
