--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
             </dialog>
         </section>
     </main>
+    <script src="js/cf.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 
 </html>
