--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     </main>
     <script src="js/cf.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/blog.js"></script>
 </body>
 
 
