header fixed for mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="sticky top-0">
+    <header class="lg:sticky top-0">
         <section class="backdrop-blur-lg">
             <div class="bg-[#F9F7F3] bg-opacity-75 pb-4">
                 <div
